Fix issue of background colour not covering page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,10 +6,6 @@
   height: 100%;
 }
 
-.pageBackground {
-  height: 100vh;
-}
-
 .pageNavbar {
   background-color: #05386B;
 }
